# QuestPaE

./: .gitattributes  .gitignore  LICENSE  README.md
Assets/: LookController.cs  New Material.mat  OpenController.cs  SIMHEI SDF.asset  ShowController.cs  WaveController.cs  downOffect.cs  test.prefab
Assets/InteractionSDK/: ComprehensiveInteraction.prefab
Assets/MetaXR/: MetaXRProjectSettings.asset
Assets/Models/Test/: Dying.controller  Dying.fbx
Assets/Oculus/: OculusProjectConfig.asset  OculusProjectSetupSettings.asset
Assets/Plugins/Android/: AndroidManifest.xml
Assets/QuestPaE/: QuestPaE.unity
Assets/QuestPaE/Animation/: Li.controller  LiFamily.controller  Nurse.controller  Wang.controller  WangFamily.controller  WangShow.controller
Assets/QuestPaE/Scripts/: AudioController.cs  BaseController.cs  DisappearOnTrigger.cs  (+17 more)
Assets/Resources/: ImmersiveDebuggerSettings.asset  OculusRuntimeSettings.asset  VuforiaConfiguration.asset
Assets/Scripts/: Control.cs  ModelActive.cs  TouchControl.cs
Assets/Settings/: Mobile_RPAsset.asset  PC_RPAsset.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/StreamingAssets/: VuforiaKeyLicense.txt  VuforiaKeyLicense.txt.template
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
QCAR/: lh
QuforiaPlugin/: .gitignore  CMakeLists.txt  build.sh
QuforiaPlugin/src/: external_camera.cpp  external_camera.h  external_tracker.cpp  external_tracker.h  quforia_jni.cpp  vuforia_driver.cpp  vuforia_driver.h
(+89 files in other folders)
